<resources>
    <string name="app_name">Festival Award Tracker</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Student List</string>
    <string name="menu_festival">Festival List</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="element_text">Element</string>
    <string name="birthday">Birthday</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="awards">Awards</string>
    <string name="student_full_name">Student Full Name</string>
    <string name="search_student">Search student</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_new_student_fragment">This is new student fragment</string>
    <string name="todo">TODO</string>
    <string name="person">Person</string>
    <string name="menu_new_student">New Student</string>
    <string name="birthdate">Birthdate</string>
    <string name="teacher_name">Teacher\' Name</string>

    <string-array name="gender_array">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Unspecified</item>
    </string-array>

    <string-array name="instruments_array">
        <item>Select Instrument</item>
        <item>Piano</item>
        <item>Voice</item>
    </string-array>
    <string name="title_activity_options">Options</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_out">Log out</string>
    <string name="name">Name</string>
    <string name="test_newstudent">Test_NewStudent</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="log_in">LOG IN</string>
    <string name="save_student">SAVE STUDENT</string>
    <string name="guardian_s_name">Guardian\'s Name</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="type">Type</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="first_name">First Name</string>
    <string name="instrument">Instrument</string>
    <string name="street">Street</string>
    <string name="add_contact">Add contact</string>
    <string name="add_parent">Add parent</string>
    <string name="festival_name">Festival Name</string>
    <string name="sample_text">Sample_Text</string>
    <string name="search">Search</string>
    <string name="search_event">Search Event</string>
    <string name="event_list">Event List</string>
    <string name="business">Business</string>
    <string name="add_address">Add Address</string>
    <string name="festival_award_tracker">Festival Award Tracker</string>
    <string name="address">Address:</string>
    <string name="school_year">School Year</string>
    <string name="starting_date">Starting Date</string>
    <string name="ending_date">Ending Date</string>
    <string name="save_event">SAVE EVENT</string>
    <string name="is_this_festival_nfmc">Is this festival NFMC?</string>
    <string name="save_festival">SAVE FESTIVAL</string>
    <string name="piano">Piano</string>
    <string name="violin">Violin</string>
    <string name="viola">Viola</string>
    <string name="cello">Cello</string>
    <string name="voice">Voice</string>
    <string name="ratings">Rate Students</string>
    <string name="add_event_description">Add event description</string>
    <string name="event_name">Event Name</string>
    <string name="save">SAVE</string>
</resources>