<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBoxInstrument01"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:width="100dp"
        android:checked="false"
        android:text="@string/piano"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxInstrument02"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBoxInstrument02"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:width="100dp"
        android:checked="false"
        android:text="@string/violin"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxInstrument01"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxInstrument03"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBoxInstrument01"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBoxInstrument03"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:width="100dp"
        android:checked="false"
        android:text="@string/viola"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBoxInstrument02"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBoxInstrument04"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:width="100dp"
        android:checked="false"
        android:text="@string/cello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxInstrument01" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBoxInstrument05"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:checked="false"
        android:text="@string/voice"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxInstrument04"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/checkBoxInstrument04" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxInstrument05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBoxInstrument05"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxInstrument03" />


</androidx.constraintlayout.widget.ConstraintLayout>